<resources>
    <string name="app_name">Skanetrafiken</string>

    <string name="action_settings">Settings</string>

    <string name="menu_item_search">Search</string>

    <string name="journey_search">Travel planner</string>
    <string name="schedule_search">Time tables</string>
    <string name="station_search">Search station</string>
    <string name="ticket_search">Tickets</string>

    <string name="from">from</string>
    <string name="to">to</string>
    <string name="change">Change</string>
    <string name="when">When</string>
    <string name="now">Now</string>
    <string name="favorites">Favorites</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="traffic">Traffic type</string>
    <string name="watched">Watched</string>

    <string-array name="dep_times">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>

    <string-array name="dep_date">
        <item>9/6</item>
        <item>10/6</item>
        <item>11/6</item>
        <item>12/6</item>
        <item>13/6</item>
        <item>14/6</item>
        <item>15/6</item>
        <item>16/6</item>
        <item>17/6</item>
        <item>18/6</item>
        <item>19/6</item>
        <item>20/6</item>
    </string-array>

</resources>
