<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.design.jesper.assignment_2.TravelFragment"
    android:id="@+id/fragment_travel"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/from"
                android:id="@+id/txt_from" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_from"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/to"
                android:id="@+id/txt_to" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_to"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/favorites"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/when"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/now"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/button2"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival"
                android:id="@+id/radioButton"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure"
                android:id="@+id/radioButton2"
                android:layout_gravity="center"
                android:layout_weight="1"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/traffic"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/button3"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/watched"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"></LinearLayout>

</LinearLayout>