<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.design.jesper.assignment_2.MenuFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_menu"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginBottom="25dp"

        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1"
            >

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btn_travel_planner"
                android:clickable="true"
                android:src="@drawable/search"
                android:padding="0dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_search"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btn_time_tables"
                android:clickable="true"
                android:src="@drawable/schedule"
                android:padding="0dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_search"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginTop="25dp"


        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_weight="1"
            >

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/btn_station_search"
                android:clickable="true"
                android:src="@drawable/clock"
                android:padding="0dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_search"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"

                android:id="@+id/btn_tickets"
                android:clickable="true"
                android:src="@drawable/ticket"
                android:padding="0dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_search"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
